[project]
name = "pipy-test-superlulu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucas Iannitello", email = "lucas.iannitello@hotmail.fr" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
