[project]
name = "pipy-test-superlulu"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SuperLulu", email = "superlulu_95@msn.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
